--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,12 @@
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
-    "ngstorage": "0.3.0"
+    "ngstorage": "0.3.0",
+    "angular-loading-bar": "0.6.0",
+    "css-toggle-switch": "~3.0.0",
+    "angular-modal-service": "~0.3.0",
+    "angular-moment": "~0.8.2",
+    "angular-validator": "~0.2.5"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
