--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "css-toggle-switch": "~3.0.0",
     "angular-modal-service": "~0.3.0",
     "angular-moment": "~0.8.2",
-    "angular-validator": "~0.2.5"
+    "angular-validator": "~0.2.5",
+    "angular-chosen-localytics": "~1.0.6",
+    "chosen_v1.2.0": "https://github.com/harvesthq/chosen/releases/download/v1.2.0/chosen_v1.2.0.zip"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
