--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,12 @@
     "angular-validator": "~0.2.5",
     "angular-chosen-localytics": "~1.0.6",
     "chosen_v1.2.0": "https://github.com/harvesthq/chosen/releases/download/v1.2.0/chosen_v1.2.0.zip",
-    "angular-pdf": "~0.3.3"
+    "angular-pdf": "~0.3.3",
+    "kinetic-slider": "*",
+    "hamsterjs": "~1.0.4",
+    "angular-mousewheel": "~1.0.4",
+    "angular-slick": "~0.1.11",
+    "slick-carousel": "~1.3.13"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
