--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.1"
+    "time-grunt": "~0.2.1",
+    "grunt-deploy": "~0.1.7",
+    "grunt-git-deploy": "~0.1.1"
   },
   "engines": {
     "node": ">=0.8.0"
