--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.1",
     "grunt-deploy": "~0.1.7",
-    "grunt-git-deploy": "~0.1.1"
+    "grunt-git-deploy": "~0.1.1",
+    "express-logger": "0.0.3"
   },
   "engines": {
     "node": ">=0.8.0"
