Add Morgan to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "gzippo": "~0.2.0",
     "grunt": "~0.4.5",
-    "express": "~4.10.1"
+    "express": "~4.10.1",
+    "morgan": "~1.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
@@ -34,7 +35,8 @@
     "time-grunt": "~0.2.1",
     "grunt-deploy": "~0.1.7",
     "grunt-git-deploy": "~0.1.1",
-    "express-logger": "0.0.3"
+    "express-logger": "0.0.3",
+    "morgan": "~1.4.1"
   },
   "engines": {
     "node": ">=0.8.0"
