--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "hamsterjs": "~1.0.4",
     "angular-mousewheel": "~1.0.4",
     "angular-slick": "~0.1.11",
-    "slick-carousel": "~1.3.13"
+    "slick-carousel": "~1.3.13",
+    "angular-disqus-api": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
